fix alignment of summary text with pagination

--- a/src/styles/components/_page-search.scss
+++ b/src/styles/components/_page-search.scss
@@ -38,7 +38,7 @@
   font-family: inherit;
   min-width: 225px;
   @include lg-up {
-    margin-bottom: 0;
+    margin-bottom: 3px;
   }
 }
 
